[tool.poetry]
name = "banyan-polars"
version = "0.1.0"
description = "Instant large-scale data analytics with the friendly polars API"
authors = ["Banyan Computing <support@banyancomputing.com>"]
license = "Apache-2.0"
packages = [
    { include = "banyan_polars" }
]

[tool.poetry.dependencies]
python = "^3.8"
polars = "^0.15.11"

[tool.poetry.dev-dependencies]
banyan-python = { path = "../banyan-python" } 

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
