[tool.poetry]
name = "banyan-python"
version = "0.1.0"
description = ""
authors = ["Banyan Computing <support@banyancomputing.com>"]
repository = "https://github.com/banyan-team/banyan-python/"
keywords = [
    "Banyan",
    "Parallel Computing"
]

[tool.poetry.dependencies]
python = "^3.7"
boto3 = "^1.18.45"
botocore = "^1.23.48"
progressbar2 = "^4.0.0"
requests = "^2.27.1"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
