[tool.poetry]
name = "banyan-python"
version = "0.2.0"
description = "Massively parallel cloud computing with popular Python libraries for analytics, processing, and simulation!"
authors = ["Banyan Computing <support@banyancomputing.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://www.banyancomputing.com/"
repository = "https://github.com/banyan-team/banyan-python/"
include = [
    "LICENSE",
]
keywords = [
    "Banyan",
    "Parallel",
    "Parallelism",
    "Distributed",
    "Scale",
    "Large-scale",
    "Big data",
    "Cloud",
    "Multiprocessing",
    "Multi-processing",
    "AWS"
]
packages = [
    { include = "banyan" }
]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.26.37"
botocore = "^1.23.48"
requests = "^2.27.1"
toml = "^0.10.2"
pytz = "^2021.3"
typing-extensions = "^4.4.0"
cloudpickle = "^2.2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
